--- a/Countdown/Countdown/Main.storyboard
+++ b/Countdown/Countdown/Main.storyboard
@@ -47,10 +47,10 @@
             </objects>
             <point key="canvasLocation" x="948" y="-3227"/>
         </scene>
-        <!--View Controller-->
+        <!--Settings View Controller-->
         <scene sceneID="ddv-zH-bYy">
             <objects>
-                <viewController id="jMX-7T-OS0" sceneMemberID="viewController">
+                <viewController id="jMX-7T-OS0" customClass="SettingsViewController" customModule="Countdown" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="BgB-an-bJ8">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -67,6 +67,9 @@
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WXv-SU-QQQ">
                                         <rect key="frame" x="189" y="0.0" width="64" height="30"/>
                                         <state key="normal" title="Purchase"/>
+                                        <connections>
+                                            <action selector="purchaseButtonPressed:" destination="jMX-7T-OS0" eventType="touchUpInside" id="eRl-uu-W8U"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                             </stackView>
@@ -82,6 +85,9 @@
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yMh-kh-4aR">
                                         <rect key="frame" x="187.66666666666666" y="0.0" width="39" height="30"/>
                                         <state key="normal" title="Reset"/>
+                                        <connections>
+                                            <action selector="resetButtonTapped:" destination="jMX-7T-OS0" eventType="touchUpInside" id="3o8-2Y-oUY"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                             </stackView>
@@ -103,6 +109,9 @@
                         <viewLayoutGuide key="safeArea" id="H3M-ur-Khd"/>
                     </view>
                     <navigationItem key="navigationItem" id="cyn-37-Qy3"/>
+                    <connections>
+                        <outlet property="pickerView" destination="lJ9-kB-edY" id="CXj-ZY-MBP"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6tx-so-qYn" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -151,6 +160,9 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="46"/>
                                 <state key="normal" title="Create"/>
+                                <connections>
+                                    <action selector="createButtonPressed:" destination="ZvF-Ho-WNT" eventType="touchUpInside" id="yX6-RF-yMk"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
@@ -162,6 +174,11 @@
                         <viewLayoutGuide key="safeArea" id="luU-sP-XAx"/>
                     </view>
                     <navigationItem key="navigationItem" title="Add a countdown" id="wIn-sU-puv"/>
+                    <connections>
+                        <outlet property="datePicker" destination="rcA-c0-xgQ" id="hS6-Ph-nYg"/>
+                        <outlet property="detailsTextField" destination="OSV-MK-9al" id="4p7-sV-1uy"/>
+                        <outlet property="nameTextField" destination="iEe-xc-UYh" id="kNE-bA-vlV"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jJc-W3-Oat" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
