--- a/Countdown/Countdown/Main.storyboard
+++ b/Countdown/Countdown/Main.storyboard
@@ -70,7 +70,7 @@
                         </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="l1g-Dd-wra">
                             <connections>
-                                <segue destination="ZvF-Ho-WNT" kind="show" id="nMq-YB-WyF"/>
+                                <segue destination="ZvF-Ho-WNT" kind="presentation" identifier="AddSegue" id="nMq-YB-WyF"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -154,11 +154,11 @@
             <objects>
                 <viewController id="ZvF-Ho-WNT" customClass="AddEditViewController" customModule="Countdown" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Ucv-0l-tql">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="716"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="MUK-Ga-dhd">
-                                <rect key="frame" x="8" y="162.00000000000003" width="398" height="356.66666666666674"/>
+                                <rect key="frame" x="8" y="66.000000000000028" width="398" height="431.66666666666674"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Countdown Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2QH-fs-a59">
                                         <rect key="frame" x="0.0" y="0.0" width="398" height="20.333333333333332"/>
@@ -167,7 +167,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Name" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="iEe-xc-UYh">
-                                        <rect key="frame" x="0.0" y="28.333333333333343" width="398" height="34"/>
+                                        <rect key="frame" x="0.0" y="28.333333333333329" width="398" height="34"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
@@ -178,24 +178,23 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="15-30 Characters" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="OSV-MK-9al">
-                                        <rect key="frame" x="0.0" y="98.666666666666686" width="398" height="34"/>
+                                        <rect key="frame" x="0.0" y="98.666666666666657" width="398" height="34"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
-                                    <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="rcA-c0-xgQ">
-                                        <rect key="frame" x="0.0" y="140.66666666666669" width="398" height="216"/>
-                                    </datePicker>
+                                    <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hrB-En-Psi">
+                                        <rect key="frame" x="0.0" y="141" width="398" height="216"/>
+                                    </pickerView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3gb-Xg-5YU">
+                                        <rect key="frame" x="0.0" y="364.66666666666669" width="398" height="67"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="46"/>
+                                        <state key="normal" title="Create"/>
+                                        <connections>
+                                            <action selector="createButtonPressed:" destination="ZvF-Ho-WNT" eventType="touchUpInside" id="yX6-RF-yMk"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                             </stackView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3gb-Xg-5YU">
-                                <rect key="frame" x="105" y="564" width="205" height="86"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="46"/>
-                                <state key="normal" title="Create"/>
-                                <connections>
-                                    <action selector="createButtonPressed:" destination="ZvF-Ho-WNT" eventType="touchUpInside" id="yX6-RF-yMk"/>
-                                </connections>
-                            </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
@@ -207,7 +206,8 @@
                     </view>
                     <navigationItem key="navigationItem" title="Add a countdown" id="wIn-sU-puv"/>
                     <connections>
-                        <outlet property="datePicker" destination="rcA-c0-xgQ" id="hS6-Ph-nYg"/>
+                        <outlet property="countdownPicker" destination="hrB-En-Psi" id="8jR-I3-2l2"/>
+                        <outlet property="createButton" destination="3gb-Xg-5YU" id="IYo-kI-duT"/>
                         <outlet property="detailsTextField" destination="OSV-MK-9al" id="4p7-sV-1uy"/>
                         <outlet property="nameTextField" destination="iEe-xc-UYh" id="kNE-bA-vlV"/>
                     </connections>
